[package]
name = "test-macos-usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["full", "sync"] }
coins-ledger = { version = "0.8.3", default-features = false }
anyhow = "1.0.75"
hidapi-rusb = "1.3.2"
lazy_static = "1.4.0"
thiserror = "1.0.50"
