[package]
name = "test-macos-usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["linux-static-rusb"]
linux-static-libusb = []
linux-static-hidraw = []
linux-static-rusb = ["rusb"]
linux-shared-libusb = []
linux-shared-hidraw = []
illumos-static-libusb = []
illumos-shared-libusb = []

[dependencies]
libc = "0.2"
rusb = { version = "0.9", optional = true }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
