[package]
name = "test-macos-usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["full", "sync"] }
anyhow = "1.0.75"
hidapi-rusb = { git = "https://github.com/naps62/hidapi-rs", branch = "libusb-macos" }
byteorder = "1.5.0"
lazy_static = "1.4.0"
thiserror = "1.0.50"
